--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "firebase": "^5.0.1",
     "react": "^16.3.1",
     "react-native": "0.55.4",
+    "react-native-dialogflow": "^3.0.3",
     "react-native-elements": "^0.19.1",
+    "react-native-gifted-chat": "^0.4.3",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.1",
     "react-redux": "^5.0.7"
